# dunzo

./: README.md  pyproject.toml
docs/: demo_jupyter.mov  demo_terminal.mov
dunzo/: __init__.py  cli.py  done.py
tests/: test_project_done.py
util/: format.py
