[tool.poetry]
name = "dunzo"
version = "0.1.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.1.1"
click = "^8.1.1"
playsound = "^1.3.0"
pyobjc = "^8.4.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry.scripts]
done = "dunzo.cli:cli"
format = "util.format:format"